Add endpoints to tasks service
